--- a/index.html
+++ b/index.html
@@ -11,6 +11,8 @@
   <link rel="stylesheet" href="https://fonts.google.com/specimen/Inter">
   <title>Frontend Mentor | News homepage</title>
 
+  <script src="./assets/src/js/app.js"></script>
+
   <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
   <style>
     .attribution {
@@ -28,7 +30,8 @@
 
   <header>
     <img src="./assets/src/images/logo.svg">
-    <nav>
+    <img id="hamburger" src="./assets/src/images/icon-menu.svg">
+    <nav class="nav">
       <ul>
         <li>Home</li>
         <li>New</li>
@@ -37,6 +40,18 @@
         <li>Categories</li>
       </ul>
     </nav>
+    <div id="mobile-nav">
+      <img id="close-nav" src="./assets/src/images/icon-menu-close.svg">
+      <nav>
+        <ul>
+          <li>Home</li>
+          <li>New</li>
+          <li>Popular</li>
+          <li>Trending</li>
+          <li>Categories</li>
+        </ul>
+      </nav>
+    </div>
   </header>
   <main>
 
@@ -98,11 +113,13 @@
     </section>
 
   </main>
-
+  <footer>
   <div class="attribution">
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>.
-    Coded by <a href="#">Your Name Here</a>.
+    Coded by <a href="#">Sara Walker</a>.
   </div>
+  </footer>
 </body>
+
 
 </html>
