--- a/index.html
+++ b/index.html
@@ -73,13 +73,13 @@
       <div class="main--new">
         <h2>New</h2>
         <hr>
-        <h4>Hydrogen VS Electric Cars</h4>
+        <a href="">Hydrogen VS Electric Cars</a>
         <p>Will hydrogen-fueled cars ever catch up to EVs?</p>
         <hr>
-        <h4>The Downsides of AI Artistry</h4>
+        <a href="">The Downsides of AI Artistry</a>
         <p>What are the possible adverse effects of on-demand AI image generation?</p>
         <hr>
-        <h4>Is VC Funding Drying Up?</h4>
+        <a href="">Is VC Funding Drying Up?</a>
         <p>Private funding by VC firms is down 50% YOY. We take a look at what that means.</p>
       </div>
     </section>
@@ -90,7 +90,7 @@
         <img src="./assets/src/images/image-retro-pcs.jpg">
         <div>
           <h2>01</h2>
-          <h4>Reviving Retro PCs</h4>
+          <a href="">Reviving Retro PCs</a>
           <p>What happens when old PCs are given modern upgrades?</p>
         </div>
       </div>
@@ -98,7 +98,7 @@
         <img src="./assets/src/images/image-top-laptops.jpg">
         <div>
           <h2>02</h2>
-          <h4>Top 10 Laptops of 2022</h4>
+          <a href="">Top 10 Laptops of 2022</a>
           <p>Our best picks for various needs and budgets.</p>
         </div>
       </div>
@@ -106,7 +106,7 @@
         <img src="./assets/src/images/image-gaming-growth.jpg">
         <div>
           <h2>03</h2>
-          <h4>The Growth of Gaming</h4>
+          <a href="">The Growth of Gaming</a>
           <p>How the pandemic has sparked fresh opportunities.</p>
         </div>
       </div>
